# YADRO_CSVReader

./: CMakeLists.txt  README.md
CSVReader/: CMakeLists.txt  CSVReader.cpp  CSVReader.h  ExceptionsCollector.cpp  ExceptionsCollector.h  Functions.cpp  ResultAtCell.cpp  ResultAtCell.h
CSVReaderTest/: CMakeLists.txt  CSVReaderTest.cc
test_tables/: t_ex1.csv  t_ex2.csv  t_ex3.csv  t_ex4.csv  t_ex5.csv  t_ex6.csv  t_ex7.csv  t_ex8.csv
